fixed footer links and broken styles

--- a/src/less/global/footer.less
+++ b/src/less/global/footer.less
@@ -20,7 +20,7 @@
 		text-transform: uppercase;
 		letter-spacing: 2px;
 		line-height: 1;
-		margin: 0 0 25px;
+		margin: 0 0 20px;
 		@media(max-width: @tablet-breakpoint) {
 			margin: 10px 0 10px !important;
 		}
